# SETDramaData

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.merged  MERGED_USAGE.md  OFFLINE_MODE_SUMMARY.md  README.md  debug_diarization.py  docker-compose.merged.yml  docker-compose.yml  docker-run.sh  etl.sh  fix_config.py  fix_symlinks.py  interactive.sh  processing_state.json  pyproject.toml  requirements.merged.txt  requirements.txt  setup_cache.py  speakers.db  test_offline.py  test_offline_complete.py  test_subtitle_driven.py  uvr5.sh  uvr5_cli.py
docs/: MIGRATION_GUIDE.md  USAGE.md  data-format-specification.md  development-notes-claude.md  development-notes-gemini.md  pyannoteoffline.md
models/: config.yaml
models/direct/speaker-diarization-3.1/: config.yaml
models/huggingface/models--pyannote--embedding/.huggingface/: download_metadata.json
models/huggingface/models--pyannote--segmentation-3.0/.huggingface/: download_metadata.json
models/huggingface/models--pyannote--segmentation-3.0/refs/: main
models/huggingface/models--pyannote--speaker-diarization-3.1/.huggingface/: download_metadata.json
models/huggingface/models--pyannote--wespeaker-voxceleb-resnet34-LM/.huggingface/: download_metadata.json
models/huggingface/models--pyannote--wespeaker-voxceleb-resnet34-LM/refs/: main
scripts/: cleanup_utils.sh  common_utils.sh  database_management.sh  model_management.sh  process_utils.sh  settings_management.sh  smart_process.sh  status_utils.sh  timing_log.sh  uvr5_utils.sh
split_dataset/test/005/001/: 005_001.trans.tsv  005_001_000020_000001.normalized.txt  005_001_000041_000001.normalized.txt  005_001_000049_000001.normalized.txt  (+23 more)
src/: __init__.py  cleanup_utils.sh  common_utils.sh  database_cleanup.py  debug_torch_load.py  download_models_local.py  download_models_offline.py  hybrid_segmentation.py  integrated_pipeline.py  offline_fix.py  offline_pipeline.py  process_utils.sh  pyannote_speaker_segmentation.py  pyannote_speaker_segmentation.py.backup  speaker_database.py  speaker_db_manager.py  speaker_level_segmentation.py  split_dataset.py  status_utils.sh  streaming_segmentation.py  subtitle_driven_segmentation.py  test_offline.py  uvr5_cli.py  uvr5_processor.py
(+420 files in other folders)
